--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "lucide-react": "^0.456.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "clsx": "^2.1.1"
+    "lucide-react": "^0.456.0",
+    "next": "^16.1.1",
+    "postcss": "^8.4.49",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1"
   }
 }
